# HTMLRender

./: LICENSE  README.md
HTMLRender/: Cargo.toml
HTMLRender/src/: components.rs  file_reader.rs  main.rs  update_commands.rs
HTMLRender/src/render/: window_state.rs
TestFiles/: blank.cmu
computer_mark_up/: Cargo.toml  build.rs
computer_mark_up/src/: collision.rs  component.rs  file_reader.rs  input_handler.rs  main.rs  scene_state.rs  shader.wgsl
computer_mark_up/src/components/: component.rs  hover.rs  mod.rs  square.rs
computer_mark_up/src/render/: color.rs  component_mesh.rs  component_shader.wgsl  mod.rs  screen_details.rs  texture.rs  vertex.rs  window_state.rs
