[package]
name = "computer_mark_up"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "*"
env_logger = "*"
log = "*"
wgpu = "*"
bytemuck = {version="*", features=["derive"]}

pollster = "*"
image = "*"
hashbrown = "*"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"